k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hoh-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hoh-api
  template:
    metadata:
      labels:
        app: hoh-api
    spec:
      containers:
        - name: hoh-api
          image: hoh-api
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
