k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hoh-api-service
spec:
  selector:
    app: hoh-api
  ports:
    - port: 8000
      targetPort: 8000
