k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hoh-frontend-service
spec:
  selector:
    app: hoh-frontend
  ports:
    - port: 80
      targetPort: 80
